Use kCGBlendModeExclusion for wxCOMPOSITION_XOR operation.

The previously used kCGBlendModeXOR doesn't seem to be the right mode to use.

Closes #13095.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72893 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775